c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/label_without_statement.c
int main(void) {
    // NOTE: this is invalid in C17, but valid in C23
    foo:
}